--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "common_protocol.h": "c",
         "smart_home.h": "c",
         "frame_adapter.h": "c",
-        "unistd.h": "c"
+        "unistd.h": "c",
+        "socket.h": "c"
     }
 }
