解决chat_room.c:45:25: error: ‘LV_ALIGN_TOP_CENTER’ undeclared (first use in this function)LV_ALIGN_TOP_CENTER改为 LV_ALIGN_TOP_MID
LV_ALIGN_BOTTOM_CENTER改为 LV_ALIGN_BOTTOM_MID

LV_ALIGN_CENTER保持不变（如果使用）

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,8 @@
         "socket.h": "c",
         "chat_room.h": "c",
         "iot_mqtt.h": "c",
-        "errno.h": "c"
+        "errno.h": "c",
+        "lv_textarea.h": "c",
+        "lv_obj.h": "c"
     }
 }
