"即时通信软件（客户端）按钮点击事件，及功能优化 https://yb.tencent.com/s/4Tv4XDBVS5Zg

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "iot_mqtt.h": "c",
         "errno.h": "c",
         "lv_textarea.h": "c",
-        "lv_obj.h": "c"
+        "lv_obj.h": "c",
+        "chat_adapt.h": "c"
     }
 }
