--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,16 @@
         "errno.h": "c",
         "lv_textarea.h": "c",
         "lv_obj.h": "c",
-        "chat_adapt.h": "c"
+        "chat_adapt.h": "c",
+        "dir_look.h": "c",
+        "in.h": "c",
+        "bit": "c",
+        "cstddef": "c",
+        "string": "c",
+        "optional": "c",
+        "limits": "c",
+        "memory": "c",
+        "new": "c",
+        "functional": "c"
     }
 }
