修复“request for member ‘xxx’ in something not a structure or union” 错误的根源是全局指针定义错误：g_chat_ctrl被定义为CHAT_CTRL_P *（二级指针），但实际应是CHAT_CTRL_P（一级指针）

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,7 @@
         "limits": "c",
         "memory": "c",
         "new": "c",
-        "functional": "c"
+        "functional": "c",
+        "inet.h": "c"
     }
 }
